Changed dockerfile